# ic_can

./: .gitignore  ARM_POSITION_MONITOR_USAGE.md  BUILD_SUMMARY.md  CAN_ID_CONFIGURATION.md  CLAUDE.md  CLEAN_STRUCTURE.md  CMakeLists.txt  CMakeLists_IC_CAN.txt  COMMUNICATION_SPEED_TESTS.md  CROSS_PLATFORM_COMPATIBILITY.md  FREQUENCY_INTERPOLATION_FEATURES.md  HT_MOTOR_MIT_PROTOCOL.md  IC_CAN_POSITION_MONITOR_GUIDE.md  IC_CAN_USAGE_SUMMARY.md  README.md  REORGANIZATION_PROPOSAL.md  arm_position_monitor  arm_position_monitor.cpp  build_and_test.sh  build_report.txt  get_arm_positions  get_arm_positions.cpp  ic_can_architecture.md  ic_can_position_monitor.cpp  openarm_can_architecture.md  performance_report.json  performance_results.csv  progress.md  simple_ic_can_monitor.cpp  test_dm_fixed.cpp  test_dm_sdk_basic.cpp  test_dm_sdk_damiao.cpp  test_ht_motor_mit.cpp  test_ic_can_system.cpp  test_motor_safe.cpp  test_simple_motor.cpp  test_system_integration.cpp
cmake/: config.h.in  (+2 more)
examples/: CMakeLists.txt  basic_control.cpp  can_id1_test.cpp  communication_speed_test.cpp  dm_tools_connection_test.cpp  frequency_interpolation_test.cpp  high_frequency_test.cpp  ic_can_demo.cpp  ic_can_usage_example.cpp  motor_gain_demo.cpp  python_example.py  response_counting_test.cpp  simple_dm4340_test.cpp  simple_frequency_demo.cpp  single_motor_test.cpp  test_dm4340.cpp
python/: CMakeLists.txt  __init__.py.in  test_functionality.py  test_performance.py  wrist_kinematics.py
python/data/trajectory_data/matlab/: dynamics_ic_can_log_20251015_145900_414.mat  dynamics_ic_can_log_20251015_145946_130.mat  dynamics_ic_can_log_20251015_150027_011.mat  dynamics_ic_can_log_20251016_174907_008.mat  dynamics_ic_can_log_20251016_175109_926.mat
python/ic_can/: __init__.py  core.py  exceptions.py
python/python/: __init__.py.in
python/src/: ic_can_python.cpp
python/tools/: data_preparation_for_dynamic_identification.py
src/: CMakeLists.txt  wrist_kinematics.cpp
src/ic_can/core/: arm_component.cpp  gripper_component.cpp  ic_can.cpp  ic_can_real.cpp  torque_predictor.cpp  torque_predictor_config.cpp  torque_predictor_pure_c.cpp  torque_predictor_regressor.cpp  torque_predictor_unified.cpp
src/ic_can/motors/: base_motor.cpp  dm_motor.cpp  dm_motor_real.cpp  ht_motor.cpp
src/ic_can/protocols/: usb2can_adapter.cpp  usb2can_real.cpp
src/ic_can/safety/: safety_module.cpp
src/tools/: arm_position_monitor.cpp  demo_real_arm_torques.cpp  dynamic_identifier.cpp  home_to_zero.cpp  logging_demo.cpp  logging_demo_simple.cpp  regressor_wrapper.cpp  set_motor_zero.cpp  simple_arm_torque_demo.cpp  test_regressor.cpp  test_torque_integration.cpp  test_torque_predictor_speed.cpp  test_torque_simple.cpp  test_torque_with_logging.cpp  torque_predictor.cpp  torque_predictor_pure_c.cpp  trajectory_executor.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_communication.cpp  test_integration.cpp  test_motors.cpp  test_performance.cpp  test_safety.cpp
tools/: CMakeLists.txt  CMakeLists_wrist_test.txt  Makefile  Makefile_pure_c  README.md  arm_position_monitor  home_to_zero  logging_demo  logging_demo.cpp  logging_demo_simple  plot_identification_results.py  regressor.cpp  regressor.py  set_motor_zero  simple_motor_test  simple_motor_test.cpp  test_wrist_kinematics.cpp  trajectory_executor
tools/logs/: joint_commands.csv  motor_states.csv
tools/logs/ic_can_log_20251014_171436_183/: joint_commands.csv  motor_states.csv
tools/logs/ic_can_log_20251014_171636_596/: joint_commands.csv  motor_states.csv
tools/logs/ic_can_log_20251014_171941_641/: joint_commands.csv  motor_states.csv
tools/logs/ic_can_log_20251014_171950_050/: joint_commands.csv  motor_states.csv
tools/logs/ic_can_log_20251014_172034_253/: joint_commands.csv  motor_states.csv
tools/logs/ic_can_log_20251014_172205_222/: joint_commands.csv  motor_states.csv
tools/logs/ic_can_log_20251014_172224_184/: joint_commands.csv  motor_states.csv
tools/logs/ic_can_log_20251014_190646_293/: joint_commands.csv  motor_states.csv
tools/logs/ic_can_log_20251014_190734_639/: joint_commands.csv  motor_states.csv
tools/logs/ic_can_log_20251014_190833_203/: joint_commands.csv  motor_states.csv
tools/logs/ic_can_log_20251014_191054_222/: joint_commands.csv  motor_states.csv
tools/logs/ic_can_log_20251014_191147_054/: joint_commands.csv  motor_states.csv
tools/logs/ic_can_log_20251014_191230_520/: joint_commands.csv  motor_states.csv
tools/logs/ic_can_log_20251014_191716_210/: joint_commands.csv  motor_states.csv
tools/logs/ic_can_log_20251014_192122_713/: joint_commands.csv  motor_states.csv
tools/logs/ic_can_log_20251014_192143_221/: joint_commands.csv  motor_states.csv
tools/logs/ic_can_log_20251014_192234_704/: joint_commands.csv  motor_states.csv
tools/logs/ic_can_log_20251014_192311_582/: joint_commands.csv  motor_states.csv
tools/logs/ic_can_log_20251014_192458_387/: joint_commands.csv  motor_states.csv
tools/logs/ic_can_log_20251014_192504_833/: joint_commands.csv  motor_states.csv
tools/logs/ic_can_log_20251014_192516_449/: joint_commands.csv  motor_states.csv
tools/regressor/: identified_pi_full.txt
tools/regressor/codegen/mex/C_mtrx_fcn/: C_mtrx_fcn.cpp  C_mtrx_fcn.h  C_mtrx_fcn_data.cpp  C_mtrx_fcn_data.h  C_mtrx_fcn_initialize.cpp  C_mtrx_fcn_initialize.h  C_mtrx_fcn_mex.mexw64  C_mtrx_fcn_terminate.cpp  C_mtrx_fcn_terminate.h  C_mtrx_fcn_types.h  SetEnv.bat  build.ninja  buildInfo.mat  compile_commands.json  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
tools/regressor/lib/: tmwtypes.h
tools/regressor/lib/C_mtrx_fcn/: C_mtrx_fcn_initialize.c  C_mtrx_fcn_initialize.h  C_mtrx_fcn_rtw.bat  C_mtrx_fcn_terminate.c  rtw_proj.tmw
tools/regressor/lib/G_vctr_fcn/: G_vctr_fcn_data.h  G_vctr_fcn_initialize.c  G_vctr_fcn_rtw.rsp  G_vctr_fcn_terminate.h  codeInfo.mat
tools/regressor/lib/M_mtrx_fcn/: M_mtrx_fcn.h  M_mtrx_fcn_data.h  M_mtrx_fcn_rtw.bat  M_mtrx_fcn_terminate.c  M_mtrx_fcn_types.h  buildInfo.mat  codeInfo.mat  compileInfo.mat  rtwtypes.h
tools/results_dir/: identification_summary.txt  identified_parameters.csv
(+195 files in other folders)
